--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 {"name":"Nathan Cain Consulting","description":"Nathan Cain provides computer networking, troubleshooting & e-waste management.","@type":"WebSite","url":"https://nathancain.com","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://res.cloudinary.com/slowmersion/image/upload/c_fill,ar_1:1,g_auto,r_max,bo_5px_solid_black,b_rgb:262c35/v1513260254/nathan-cain.jpg"}},"headline":"Nathan Cain Consulting","@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
-    <link rel="stylesheet" href="/minimal/assets/css/style.css?v=833807bae314429c770ba7ba2db282224c7b7c23">
+    <link rel="stylesheet" href="https://pages-themes.github.io/minimal/assets/css/style.css?v=833807bae314429c770ba7ba2db282224c7b7c23">
     <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
