--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <img src="https://res.cloudinary.com/slowmersion/image/upload/c_fill,ar_1:1,g_auto,r_max,bo_20px_solid_black,b_rgb:FFFFFF/v1513260254/nathan-cain.jpg" alt="Nathan Cain's Face ;-)">
         
 
-        <p>Nathan Cain provides computer networking troubleshooting & e-waste management.</p>
+        <p>Providing computer/network troubleshooting & e-waste management.</p>
 
         
         <p class="view"><a href="https://github.com/pages-themes/minimal">View the Project on GitHub <small>pages-themes/minimal</small></a></p>
