--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         
         <!--<p>This project is maintained by <a href="https://github.com/pages-themes">pages-themes</a></p>-->
         
-        <p><small>Hosted on GitHub Pages — Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <!-- <p><small>Hosted on GitHub Pages — Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p> -->
       </footer>
     </div>
     <script src="/minimal/assets/js/scale.fix.js"></script>
