--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   </head>
   <body style="">
     <div class="wrapper">
-      <header>
-          <h1>Nathan Cain</h1>        
+      <header style="text-align:center;">
+          <h1><strong>Nathan Cain</strong><BR>Consulting</h1>        
         
           <img src="https://res.cloudinary.com/slowmersion/image/upload/c_fill,ar_1:1,g_auto,r_max,bo_100px_solid_black,b_rgb:FFFFFF/v1513260254/nathan-cain.jpg" alt="Nathan Cain's Face ;-)">
         
