--- a/index.html
+++ b/index.html
@@ -283,6 +283,10 @@ input[type=text]:focus + label {
       
     <script src="/minimal/assets/js/scale.fix.js"></script>
     
-  
+          <script>
+          $(document).ready(function() {
+    $('input#input_text, textarea#textarea1').characterCounter();
+  });
+          </script>
 
 </body></html>
