--- a/index.html
+++ b/index.html
@@ -94,10 +94,9 @@ input[type=text]:focus + label {
           <h1>E-waste management</h1>
           <p>I can collect your company's electronic equipment that is near or at the end of its useful life. Depending on the level of certification and/or data wiping you require this can many times be done at no fee. Your e-waste will be handled in an environmentally responsible way and in accordance with all local laws.</p>
        
-          <h1 id="contact">Contact Me</h1>
        <div class="row" style="margin:50px">
   <div class="col s12 m8 l6 offset-m2 offset-l3 white" style="padding:30px;border-radius:5px">
-    <h4 class="blue-text text-darken-2" style="margin-top:0px;font-weight:300">Contact Us</h4>
+    <h4 id="contact" class="blue-text text-darken-2" style="margin-top:0px;font-weight:300">Contact Me</h4>
     <form action="https://formspree.io/ndcain@gmail.com" method="POST">
       <input placeholder="Name" class="input-field" type="text" name="name"/>
       <input placeholder="email" class="input-field" type="email" name="_replyto">
