--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <!-- End Jekyll SEO tag -->
 
     <link rel="stylesheet" href="https://pages-themes.github.io/minimal/assets/css/style.css?v=833807bae314429c770ba7ba2db282224c7b7c23">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
     <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
