--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     <link rel="stylesheet" href="https://pages-themes.github.io/minimal/assets/css/style.css?v=833807bae314429c770ba7ba2db282224c7b7c23">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css"> -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script
+  src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+  integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
+  crossorigin="anonymous"></script>
 
     <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -284,7 +288,7 @@ input[type=text]:focus + label {
       </footer>
     </div>
       
-    <script src="/minimal/assets/js/scale.fix.js"></script>
+    <script src="https://pages-themes.github.io//minimal/assets/js/scale.fix.js"></script>
     
           <script>
           $(document).ready(function() {
