--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@ input[type=text]:focus + label {
 
         
        <ul class="downloads">
-          <li><a href="#contact">Contact form</a></li>
-           <li><a href="#" onclick="return false;">(501) 463-6336</a></li>
-           <li><a mailto="me@nathancain.com">email</a></li>
+          <li><a href="#contact">Contact</a></li>
+           <li><a href="#" onclick="return false;">(501)&nbsp;463-6336</a></li>
+           <li><a href="mailto:me@nathancain.com">email</a></li>
         </ul>
        
       </header>
