--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ input[type=text]:focus + label {
         
        <ul class="downloads">
           <li><a href="#contact">Contact</a></li>
-           <li><a href="#" onclick="return false;">(501)&nbsp;463-6336</a></li>
+           <li><a>(501)&nbsp;463-6336</a></li>
            <li><a href="mailto:me@nathancain.com">email</a></li>
         </ul>
        
