--- a/index.html
+++ b/index.html
@@ -89,20 +89,20 @@ input[type=text]:focus + label {
       </header>
       <section>
 
-          <h1>Computer and network troubleshooting</h1>
-          <p>Contact me if you need help with your computer(s) or your network. (501) 463-6336</p>
-          <h1>Web development</h1>
+          <h2>Computer and network troubleshooting</h2>
+          <p>Contact me if you need help with your computer(s) or your network. (501)&nbsp;463-6336</p>
+          <h2>Web development</h2>
           <p>Check out some of my personal projects:</p>
           <ul>
               <li><a href="https://pinwean.com">Pinwean.com</a> - Teach yourself to read Chinese</li>
               <li><a href="https://play.google.com/store/apps/details?id=appinventor.ai_ndcain.audio_lessons">Audio Lessons Generator</a> - android app</li>
           </ul>
-          <h1>E-waste management</h1>
+          <h2>E-waste management</h2>
           <p>I can collect your company's electronic equipment that is near or at the end of its useful life. Depending on the level of certification and/or data wiping you require this can many times be done at no fee. Your e-waste will be handled in an environmentally responsible way and in accordance with all local laws.</p>
        
        <div class="row" style="margin:50px">
   <div class="col s12 m8 l6 offset-m2 offset-l3 white" style="padding:30px;border-radius:5px">
-    <h1 id="contact" class="blue-text text-darken-2" style="margin-top:0px;font-weight:300">Contact Me</h1>
+    <h2 id="contact" class="blue-text text-darken-2" style="margin-top:0px;font-weight:300">Contact Me</h2>
     <form action="https://formspree.io/ndcain@gmail.com" method="POST">
       <input placeholder="Name" class="input-field" type="text" name="name"/>
       <input placeholder="email" class="input-field" type="email" name="_replyto">
