--- a/anwei.html
+++ b/anwei.html
@@ -1,3 +1,4 @@
+<body>
 <p>信赖赐一切安慰的上帝 - 44 首歌 - 内森LittleRock中文小组</p>
 
 <ul>
@@ -424,3 +425,4 @@
 <li>让耶和华上帝赐你安慰，像一个小羔羊一样。他会带你进来他的房子，现在赐你属灵的安慰。将来他会在有属灵又有身体的地方让你不会再经历哀恸。那时候就不需要安慰了。是的。信赖赐一切安慰的上帝。</li></ul>
 </li>
 </ul>
+</body>
