--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@ input[type=text]:focus + label {
           <p>See my <a href="https://nathancain.pb.gallery/">portfolio</a> of aerial work.</p>
           <h2>Computer and network troubleshooting</h2>
           <p>Contact me if you need help with your computer(s) or your network. (501)&nbsp;463-6336</p>
+          <h3>I wrote a book</h3>
+          <p>Buy my book about learning Chinese on Amazon. It's called <a href="https://www.amazon.com/gp/product/1470132907/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1470132907&linkCode=as2&tag=knehow-20&linkId=00dd39abb025792acee0d1cf304b6df8">Knee Howdy: Challenge Chinese Vocabulary to a Duel and Bury it Six Feet Under Inside Your Brain</a>.</p>
           <h2>Web development</h2>
           <p>Check out some of my personal projects:</p>
           <ul>
