--- a/index.html
+++ b/index.html
@@ -88,19 +88,19 @@ input[type=text]:focus + label {
        
       </header>
       <section>
-          <h2>Drone Photography/Videography/Mapping</h2>
+          <h3>Drone Photography/Videography/3d Mapping</h3>
           <p>See my <a href="https://nathancain.pb.gallery/">portfolio</a> of aerial work.</p>
-          <h2>Computer and network troubleshooting</h2>
+          <h3>Computer and network troubleshooting</h3>
           <p>Contact me if you need help with your computer(s) or your network. (501)&nbsp;463-6336</p>
           <h3>I wrote a book</h3>
           <p>Buy my book about learning Chinese on Amazon. It's called <a href="https://www.amazon.com/gp/product/1470132907/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1470132907&linkCode=as2&tag=knehow-20&linkId=00dd39abb025792acee0d1cf304b6df8">Knee Howdy: Challenge Chinese Vocabulary to a Duel and Bury it Six Feet Under Inside Your Brain</a>.</p>
-          <h2>Web development</h2>
+          <h3>Web development and Apps</h3>
           <p>Check out some of my personal projects:</p>
           <ul>
               <li><a href="https://pinwean.com">Pinwean.com</a> - Teach yourself to read Chinese</li>
               <li><a href="https://play.google.com/store/apps/details?id=appinventor.ai_ndcain.audio_lessons">Audio Lessons Generator</a> - android app</li>
           </ul>
-          <h2>E-waste management</h2>
+          <h3>E-waste management</h3>
           <p>I can collect your company's electronic equipment that is near or at the end of its useful life. Depending on the level of certification and/or data wiping you require this can many times be done at no fee. Your e-waste will be handled in an environmentally responsible way and in accordance with all local laws.</p>
        
        <div class="row" style="margin:50px">
