--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ input[type=text]:focus + label {
           <h3>Computer and network troubleshooting</h3>
           <p>Contact me if you need help with your computer(s) or your network. (501)&nbsp;463-6336</p>
           <h3>I wrote a book</h3>
-          <p>Buy my book about learning Chinese on Amazon. It's called <a href="https://www.amazon.com/gp/product/1470132907/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1470132907&linkCode=as2&tag=knehow-20&linkId=00dd39abb025792acee0d1cf304b6df8">Knee Howdy: Challenge Chinese Vocabulary to a Duel and Bury it Six Feet Under Inside Your Brain</a>.</p>
+          <p>Buy my book about learning Chinese. It's on Amazon. It's called <a href="https://www.amazon.com/gp/product/1470132907/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1470132907&linkCode=as2&tag=knehow-20&linkId=00dd39abb025792acee0d1cf304b6df8">Knee Howdy: Challenge Chinese Vocabulary to a Duel and Bury it Six Feet Under Inside Your Brain</a>.</p>
           <h3>Web development and Apps</h3>
           <p>Check out some of my personal projects:</p>
           <ul>
