--- a/lrcitywitnessing/index.html
+++ b/lrcitywitnessing/index.html
@@ -1,1 +1,15 @@
-<iframe src="https://goo.gl/forms/0WLw4NyIlTWwnPcr2"><a href="https://goo.gl/forms/0WLw4NyIlTWwnPcr2">Request to a City Witnessing Spot</a></iframe>
+<style type="text/css">
+body {
+   margin: 0;
+   overflow: hidden;
+}
+#iframe1 {
+    position:absolute;
+    left: 0px;
+    width: 100%;
+    top: 0px;
+    height: 100%;
+}
+</style>
+
+<iframe id="iframe1" src="https://goo.gl/forms/0WLw4NyIlTWwnPcr2"><a href="https://goo.gl/forms/0WLw4NyIlTWwnPcr2">Request to a City Witnessing Spot</a></iframe>
