--- a/lrcitywitnessing/index.html
+++ b/lrcitywitnessing/index.html
@@ -1,26 +1,1 @@
-<style type="text/css">
-
-   .iframe-container {
-  overflow: hidden;
-  padding-top: 56.25%;
-  position: relative;
-}
- 
-.iframe-container iframe {
-   border: 0;
-   height: 100%;
-   left: 0;
-   position: absolute;
-   top: 0;
-   width: 100%;
-}
- 
-/* 4x3 Aspect Ratio */
-.iframe-container-4x3 {
-  padding-top: 75%;
-}
-</style>
-
-<div class="iframe-container">
-<iframe id="iframe1" src="https://goo.gl/forms/0WLw4NyIlTWwnPcr2" allowfullscreen><a href="https://goo.gl/forms/0WLw4NyIlTWwnPcr2">Request to a City Witnessing Spot</a></iframe>
-</div>
+<h3><a href="https://goo.gl/forms/0WLw4NyIlTWwnPcr2">City Witnessing Schedule Request</a></h3>
