--- a/lrcitywitnessing/index.html
+++ b/lrcitywitnessing/index.html
@@ -1,1 +1,1 @@
-<h3><a href="https://goo.gl/forms/0WLw4NyIlTWwnPcr2">City Witnessing Schedule Request</a></h3>
+<div style="text-align: center"><a target="_blank" href="https://goo.gl/forms/0WLw4NyIlTWwnPcr2">City Witnessing Schedule Request</a></div>
