--- a/lrcitywitnessing/index.html
+++ b/lrcitywitnessing/index.html
@@ -1,1 +1,1 @@
-<div style="text-align: center"><a target="_blank" href="https://goo.gl/forms/0WLw4NyIlTWwnPcr2">City Witnessing Schedule Request</a></div>
+<div style="text-align: center;"><p><a target="_top" href="https://goo.gl/forms/0WLw4NyIlTWwnPcr2">City Witnessing Schedule Request</a></p></div>
