--- a/lrcitywitnessing/index.html
+++ b/lrcitywitnessing/index.html
@@ -1,26 +1,15 @@
 <style type="text/css">
-
-   .iframe-container {
-  overflow: hidden;
-  padding-top: 56.25%;
-  position: relative;
+body {
+   margin: 0;
+   overflow: hidden;
 }
- 
-.iframe-container iframe {
-   border: 0;
-   height: 100%;
-   left: 0;
-   position: absolute;
-   top: 0;
-   width: 100%;
-}
- 
-/* 4x3 Aspect Ratio */
-.iframe-container-4x3 {
-  padding-top: 75%;
+#iframe1 {
+    position:absolute;
+    left: 0px;
+    width: 100%;
+    top: 0px;
+    height: 100%;
 }
 </style>
 
-<div class="iframe-container">
-<iframe id="iframe1" src="https://goo.gl/forms/0WLw4NyIlTWwnPcr2" allowfullscreen><a href="https://goo.gl/forms/0WLw4NyIlTWwnPcr2">Request to a City Witnessing Spot</a></iframe>
-</div>
+<iframe id="iframe1" src="https://goo.gl/forms/0WLw4NyIlTWwnPcr2"><a href="https://goo.gl/forms/0WLw4NyIlTWwnPcr2">Request to a City Witnessing Spot</a></iframe>
