--- a/index.html
+++ b/index.html
@@ -89,8 +89,9 @@ input[type=text]:focus + label {
       </header>
       <section>
           <h3>Videography</h3>
-          <p><div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/325086987?title=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-<p><a href="https://vimeo.com/325086987">Real Estate Sample</a> from <a href="https://vimeo.com/user40173370">Nathan Cain</a> on <a href="https://vimeo.com">Vimeo</a>.</p></p>
+          <p>
+          <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/325086987?title=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+          </p>
           <h3>Computer and network troubleshooting</h3>
           <p>Contact me if you need help with your computer(s) or your network. (501)&nbsp;463-6336</p>
           <h3>I wrote a book</h3>
