--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ input[type=text]:focus + label {
           <img src="https://res.cloudinary.com/slowmersion/image/upload/c_fill,ar_1:1,g_auto,r_max,bo_100px_solid_black,b_rgb:FFFFFF/v1513260254/nathan-cain.jpg" alt="Nathan Cain's Face ;-)">
         
 
-        <p>videography, Drone services, PC/network troubleshooting, web development & e-waste management.</p>
+        <p>Videographer, drone pilot, computer & network troubleshooter, web developer, and electronics recycler.</p>
 
         
        <!-- <p class="view"><a href="https://github.com/pages-themes/minimal">View the Project on GitHub <small>pages-themes/minimal</small></a></p> -->
