--- a/index.html
+++ b/index.html
@@ -92,17 +92,21 @@ input[type=text]:focus + label {
           <p>
           <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/325086987?title=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
           </p>
+          <HR>
           <h3>Computer and network troubleshooting</h3>
-          <p>Contact me if you need help with your computer(s) or your network. (501)&nbsp;463-6336</p>
-          <h3>I wrote a book</h3>
+          <p><a href="#contact">Contact me</a> if you need help with your computer(s) or your network. (501)&nbsp;463-6336</p>
+          <HR>
+              <h3>I wrote a book</h3>
           <p>Buy my book about learning Chinese. It's on Amazon. It's called <a href="https://www.amazon.com/gp/product/1470132907/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1470132907&linkCode=as2&tag=knehow-20&linkId=00dd39abb025792acee0d1cf304b6df8">Knee Howdy: Challenge Chinese Vocabulary to a Duel and Bury it Six Feet Under Inside Your Brain</a>.</p>
-          <h3>Web development and Apps</h3>
+          <HR>
+              <h3>Web development and Apps</h3>
           <p>Check out some of my personal projects:</p>
           <ul>
               <li><a href="https://pinwean.com">Pinwean.com</a> - Teach yourself to read Chinese</li>
               <li><a href="https://play.google.com/store/apps/details?id=appinventor.ai_ndcain.audio_lessons">Audio Lessons Generator</a> - android app</li>
           </ul>
-          <h3>E-waste management</h3>
+          <HR>
+              <h3>E-waste management</h3>
           <p>I can collect your company's electronic equipment that is near or at the end of its useful life. Depending on the level of certification and/or data wiping you require this can many times be done at no fee. Your e-waste will be handled in an environmentally responsible way and in accordance with all local laws.</p>
        
        <div class="row" style="margin:50px">
