--- a/index.html
+++ b/index.html
@@ -89,9 +89,8 @@ input[type=text]:focus + label {
       </header>
       <section>
           <h3>Videography</h3>
-          <p>
           <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/325086987?title=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-          </p>
+          <p><a href="#contact">Contact</a> me to setup a consultation for your next real estate video.<BR>Call or text (501)&nbsp;463-6336.</p>
           <HR>
           <h3>Computer and network troubleshooting</h3>
           <p><a href="#contact">Contact me</a> if you need help with your computer(s) or your network.<BR>(501)&nbsp;463-6336</p>
