--- a/lrcitywitnessing/index.html
+++ b/lrcitywitnessing/index.html
@@ -11,5 +11,7 @@ body {
     height: 100%;
 }
 </style>
-<iframe class="airtable-embed" src="https://airtable.com/embed/shrA9FS1SFWLanah5?backgroundColor=green" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
+
+<script src="https://static.airtable.com/js/embed/embed_snippet_v1.js"></script><iframe class="airtable-embed airtable-dynamic-height" src="https://airtable.com/embed/shrA9FS1SFWLanah5?backgroundColor=green" frameborder="0" onmousewheel="" width="100%" height="1472.003906" style="background: transparent; border: 1px solid #ccc;"></iframe>
+
 <!-- <iframe id="iframe1" src="https://goo.gl/forms/0WLw4NyIlTWwnPcr2"><a href="https://goo.gl/forms/0WLw4NyIlTWwnPcr2">Request to a City Witnessing Spot</a></iframe> -->
